--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/nouislider"></script>
+		<script src="//cdn.jsdelivr.net/npm/nouislider"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
